[gd_scene load_steps=5 format=3 uid="uid://ds128awnut0r6"]

[ext_resource type="Script" path="res://Scripts/ClassMain.gd" id="1_7krgs"]
[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_i8chx"]
[ext_resource type="PackedScene" uid="uid://ntar0ljurf53" path="res://Scenes/BackgroundBio.tscn" id="2_g4e4o"]
[ext_resource type="PackedScene" uid="uid://dovpmp4f4ubog" path="res://Scenes/animated_button.tscn" id="6_y2ups"]

[node name="InitialBuildClassMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_i8chx")

[node name="Background" parent="." instance=ExtResource("2_g4e4o")]
layout_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ClassButtons" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100
script = ExtResource("1_7krgs")

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/ClassButtons"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/ClassButtons/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 450

[node name="Back" parent="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer2/MarginContainer" instance=ExtResource("6_y2ups")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
label_name = "Back"

[node name="LineEdit" type="RichTextLabel" parent="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=50.0 freq=3.0 connected=1][center]Choose your Class[/center][/wave]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/ClassButtons/VBoxContainer2"]
layout_mode = 2

[node name="AddButton" parent="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer" instance=ExtResource("6_y2ups")]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 4
label_name = "+"

[node name="Next" parent="ScrollContainer/ClassButtons/VBoxContainer2" instance=ExtResource("6_y2ups")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color_theme = "Primary"
label_name = "Confirm"

[connection signal="pressed" from="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer2/MarginContainer/Back" to="ScrollContainer/ClassButtons" method="_on_back_pressed"]
[connection signal="pressed" from="ScrollContainer/ClassButtons/VBoxContainer2/VBoxContainer/AddButton" to="ScrollContainer/ClassButtons" method="_on_add_button_pressed"]
[connection signal="pressed" from="ScrollContainer/ClassButtons/VBoxContainer2/Next" to="ScrollContainer/ClassButtons" method="_on_next_pressed"]
